prod/drawzy/ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ws
  namespace: drawzy-prod
  labels:
    app:  ws
spec:
  replicas: 4
  selector:
    matchLabels:
      app:  ws
  template:
    metadata:
      labels:
        app:  ws
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: ws
      restartPolicy: Always 
      containers:
        - name: ws
          image:  ajayt8374/ws@sha256:02f607fa4f7275221866a69f7da7674a844f74be76f2d8fe8357ffbce17a9728
          imagePullPolicy:  IfNotPresent
          ports:
            - containerPort: 8080
          
          #Requests & Limits
          resources:
            requests:
              cpu:  "0.5"
              memory: "500Mi"
            limits:
              cpu:  "1"
              memory: "500Mi"
          
          # env variables
